     custom tiles look the same in-game as they do in the editor.
 * User interface:
   * Fixed a broken translation which gave all females the prefix female^ on
     alignment description when using the "C" locale or any translation that
     is missing that string.
   * Make the load and recruit hotkey use the ctrl instead of cmd key on non
     Mac systems
 * WML engine:
   * It is now possible to use [time_area] to add or remove new local ToD
     areas and their schedules during scenario events. Removal requires to
     associate an id. to [time_area]s, or it won't work.
   * Added some convenience macros for units: {TRANSFORM_UNIT}, etc.
 * Miscellaneous and bug fixes:
   * Fixed segmentation fault when wml modified and killed attacker and
   defender in a battle
   * Add some gcc-4.3.0 compilation fixes (patch #1083)
   * Fixed bug #12094: Event "last breath" cannot be triggered for attackers
   * Fixed Wesnoth crashing after an attacker/defender_hits/misses event if
   the WML kills one unit and replaces/unstores the other



Version 1.5.2:
 * campaigns:
   * Son of the Black Eye
     * new set of portrait art
     * in 'Black Flag', there's now several galleons transporting enemies to the
       beach, and no watch towers
     * in 'Saving Inarix', you can now more precisely control when you destroy
       the bridge
     * many assorted small tweaks to most scenarios
     * when leading the Great Horde, all units now require 1 less upkeep
   * Tutorial
     * Fixed players side name to same as leaders name (bug: #10114)
 * formula AI:
   * added variant_iterator to iterate over variant elements
   * modified choose, filter, find and map functions to use variant_iterator,
     so they work correctly with a variant_map type
   * new formula AI functions: contains_string, find_shroud, movement_cost,
     tolist, tomap, is_unowned_village, max_possible_damage_with_retaliation
   * added possibility to fallback to human player