@@ -197,6 +197,8 @@ wesnoth_sources = Split("""
     variable.cpp
     variant.cpp
     widgets/combo.cpp
+    widgets/combo_drag.cpp
+    widgets/drop_target.cpp
     widgets/scrollpane.cpp
     gui/dialogs/addon_connect.cpp
     gui/dialogs/dialog.cpp
