@@ -28,6 +28,7 @@ Version 1.5.2+svn:
      is missing that string.
    * Make the load and recruit hotkey use the ctrl instead of cmd key on non
      Mac systems
+   * Added initial drag&drop support for button widgets
  * WML engine:
    * It is now possible to use [time_area] to add or remove new local ToD
      areas and their schedules during scenario events. Removal requires to
